<resources>
    <string name="app_name">ChatBox</string>
    <string name="mailAddressEnterField">メールアドレス</string>
    <string name="passwordEnterField">パスワード</string>
    <string name="passwordConfirmField">もう一度パスワード</string>
    <string name="loginBtn">ログイン</string>
    <string name="logout">ログアウト</string>
    <string name="createAccountBtn">アカウント作成</string>
    <string name="accountNameEnterField">アカウント名</string>
    <string name="action_settings">Settings</string>
    <string name="roomName">部屋名</string>
    <string name="roomId">部屋ID</string>
    <string name="roomToken">トークン</string>
    <string name="roomCapacity">制限人数</string>
    <string name="deleteRoom">部屋消去</string>
    <string name="dragOutMember">強制退室</string>
    <string name="lockRoom">部屋ロック</string>
    <string name="restartChat">チャット再開</string>
    <string name="createRoomNotice">部屋を生成します。\n部屋IDには、英数字で入室に使用する部屋IDを。\nトークンには部屋のカギ（パスワード）となる英数字を\n入力してください</string>
    <string name="enterRoomNotice">部屋に入室します。\n部屋IDには、英数字で入室に使用する部屋IDを。\nトークンには部屋のカギ（パスワード）となる英数字を\n入力してください</string>

</resources>
