<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.techacademy.hideto.uetsuka.chatbox.RoomManagementOptionActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restartChat"
        android:id="@+id/restartChat"
        android:onClick="reStartChat"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteRoom"
        android:id="@+id/deleteRoom"
        android:onClick="deleteRoom"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lockRoom"
        android:id="@+id/lockRoom"
        android:onClick="lockRoom"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dragOutMember"
        android:id="@+id/dragOutMember"
        android:onClick="dragOutMember"/>



</LinearLayout>
